--- a/index.html
+++ b/index.html
@@ -86,6 +86,24 @@ layout: default
 	
 	<div class="content anchor" id="project">  
 	   <h3>Course Projects</h3>
+		<p><span style="font-weight: bold;">Construction of a Spam Filtering System; Machine Learning</span> <br>
+		Preprocessed data sets with the html2text;
+		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
+			
+		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span> <br>
+			Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
+			Enforced human-portion constraints to get a mimimiazation problem
+		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
+			
+		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; 
+			Probability and Stochastic Process </span> <br>
+		Monte Carlo method relies on repeated random sampling to obtain numerical results. 
+		I used it to calculate definite integrals and compared it with numerical methods and improved it.
+		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
+			
+		
+		
+		
 		 <p><span style="font-weight: bold;">Tetris Game; C++ </span> <br>
 		Managed piece shape and edge collisions. Updated pieces and moved them down one row each time a fixed time 
 			 interval expires;
@@ -99,18 +117,7 @@ layout: default
 		Clustered a catalog of 2 million sky objects into similar objects, e.g. galaxies, nearby stars, quasars, etc. 
 			<span class="tag"><a href="papers/Cluster.txt"> [Details]</a></span>
 		
-		<p><span style="font-weight: bold;">Construction of a Spam Filtering System; Machine Learning</span> <br>
-		Preprocessed data sets with the html2text;
-		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
-			
-		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; 
-			Probability and Stochastic Process </span> <br>
-		Monte Carlo method relies on repeated random sampling to obtain numerical results. 
-		I used it to calculate definite integrals and compared it with numerical methods and improved it.
-		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
-			
-		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span>
-		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
+
 		
 		<p><span style="font-weight: bold;">Assembly Language Practice;
 			The Principle of Microcomputers and Interface Techniques </span>
