--- a/index.html
+++ b/index.html
@@ -56,9 +56,18 @@ layout: default
 		</p>
 	
 	<div class="content anchor" id="research">  	      
-	<h3>Research</h3>     
+	<h3>Research</h3>   
+	<p><span style="font-weight: bold;">Express list handwritten telephone number recognition</span> <br>
+	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp   
+		Nanjing University <br> 
+		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN <br>
+		Worte a program to transform the data  from databse to formats that suit my deep learning frame. <br>
+		Applied BN and ReLU after every convolution, and used SK-s (small kernel size with s channels in convolution layers) networks structure.<br> 
+		Accomplished 96% accurancy on each digit and 90% accurancy on a series of telephone number.<br>
+		
+		
 	<p><span style="font-weight: bold;">3D Reconstruction Using (Light Detection And Ranging) Lidar and Camera</span> <br>
-	<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
+	<span style="font-style: italic;"> Aug.2016-Feb.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br> 
 		Collected and preprocessed point cloud datasets for indoor 3D scene reconstruction.  <br>
 		Reconstructed real-time indoor scenes using Motion Estimation and Mapping. <br>
@@ -68,7 +77,8 @@ layout: default
           
 	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
-		Constructed three models to depict road circumstances and two models to predict car motion using Markov Chain 
+		Constructed three models to depict road circumstances and two models to predict car motion using 
+		<span style="font-style: bold;"> Markov Decision Process </span>
 			and OD estimated matrix method; Matlab, C.<br>
 		Improved our solutions using Convex Optimization in terms of traffic load, vehicle type and different kinds of 
 			tollbooths. <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span> <br>
@@ -89,16 +99,18 @@ layout: default
 		Preprocessed data sets with the html2text;
 		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
 			
-		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span> <br>
-			Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
-			Enforced human-portion constraints to get a mimimiazation problem
-		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
-			
 		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; 
 			Probability and Stochastic Process </span> <br>
 		Monte Carlo method relies on repeated random sampling to obtain numerical results. 
 		I used it to calculate definite integrals and compared it with numerical methods and improved it.
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
+			
+		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span> <br>
+			Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
+			Enforced human-portion constraints to get a mimimiazation problem
+		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
+			
+		
 			
 		
 		
