--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ layout: default
 	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
 		Constructed three models to depict road circumstances and two models to predict car motion using 
-		<span style="font-style: bold;"> Markov Decision Process </span>
+		<b> Markov Decision Process </b>
 			and OD estimated matrix method; Matlab, C.<br>
-		Improved our solutions using Convex Optimization in terms of traffic load, vehicle type and different kinds of 
+		Improved our solutions using <b> Convex Optimization </b> in terms of traffic load, vehicle type and different kinds of 
 			tollbooths. <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span> <br>
 		Wrote a report to ministry of transportation. 
 		   
