--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@ layout: default
 	
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>   
-	<p><span style="font-weight: bold;">Express list handwritten telephone number recognition</span> <br>
-	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp   
-		Nanjing University <br> 
+	<p><span style="font-weight: bold;">Express bill handwritten telephone number recognition</span> <br>
+	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp   LAMAD Group 
+		(led by <span class="tag"><a href="http://cs.nju.edu.cn/zhouzh/"> Zhi-Hua Zhou</a></span>), Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN <br>
-		Worte a program to transform the data  from databse to formats that suit my deep learning frame. <br>
+		Worte a program to transform the data  from databse to formats that suit my deep learning code frame. <br>
 		Applied BN and ReLU after every convolution, and used SK-s (small kernel size with s channels in convolution layers) networks structure.<br> 
 		Accomplished 96% accurancy on each digit and 90% accurancy on a series of telephone number.<br>
 		
@@ -77,6 +77,7 @@ layout: default
           
 	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
+		Learned K-armed bandit, Softmax, Monte Carlo RL, imitation learning. <br>
 		Constructed three models to depict road circumstances and two models to predict car motion using 
 		<b> Markov Decision Process </b>
 			and OD estimated matrix method; Matlab, C.<br>
