--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ layout: default
 	<p><span style="font-weight: bold;">Express bill handwritten telephone number recognition</span> <br>
 	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp   LAMAD Group 
 		(led by <span class="tag"><a href="http://cs.nju.edu.cn/zhouzh/"> Zhi-Hua Zhou</a></span>), Nanjing University <br> 
-		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN <br>
+		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Worte a program to transform the data  from databse to formats that suit my deep learning code frame. <br>
 		Applied BN and ReLU after every convolution, and used SK-s (small kernel size with s channels in convolution layers) networks structure.<br> 
 		Accomplished 96% accurancy on each digit and 90% accurancy on a series of telephone number.<br>
@@ -100,7 +100,7 @@ layout: default
 		Preprocessed data sets with the html2text;
 		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
 			
-		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; 
+		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Multidimensional Deﬁnite Integrals; 
 			Probability and Stochastic Process </span> <br>
 		Monte Carlo method relies on repeated random sampling to obtain numerical results. 
 		I used it to calculate definite integrals and compared it with numerical methods and improved it.
