--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: default
 	
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>   
-	<p><span style="font-weight: bold;">Express bill handwritten telephone number recognition</span> <br>
+	<p><span style="font-weight: bold;">Express bill handwritten telephone number recognition, leader</span> <br>
 	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp   LAMAD Group 
 		(led by <span class="tag"><a href="http://cs.nju.edu.cn/zhouzh/"> Zhi-Hua Zhou</a></span>), Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
@@ -187,7 +187,7 @@ layout: default
 		</p>
 		
 		<p>Research Intern/ Group leader in CHANGJIANG ELEC. TECH. 
-			(<span class="tag"><a href=" http://www.cj-elec.com/en/"> JCET </a> )
+			(<span class="tag"><a href=" http://www.cj-elec.com/en/">JCET</a>)
 			<span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html"> 
 			[Report]</a>
 			</span><br>
