--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@ layout: default
 			(Joyful Snowflakes wirtten by Chih-mo Hsu 
 			<span class="tag">
 			<a href="http://v.youku.com/v_show/id_XMjA1ODIzMjQwOA==.html?spm=a2hzp.8244740.userfeed.5!2~5~5~5!3~5~A.Rb6hYG">
-			[Video]</a>
-			</span>) <br>    
+			[Video]</a></span>) <br>    
 		Vice president of a Young Volunteers Association 
 			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Report]</a></span> <br>   
 		Bronze medal at Nanjing University 55th Sports Meeting 
