--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 			Excellent Engineer Training Program</a>,
 		from <a href="http://www.moe.gov.cn/">the China Minstry of Education</a>.
 		
-		<p>I got a meritorious winner prize in 2016 National Mathematical Modeling Contest. 
+		<p>I got a meritorious winner prize in 2016 National Mathematical Modeling Contest (MCM). 
 			<span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span> <br>
 		I won the first prize in an electronics design contest and the paper about it was published in Nanjing University 
 		19th Art and Science Forum. <span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span> 
@@ -58,7 +58,7 @@ layout: default
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>   
 	<p><span style="font-weight: bold;">Express bill handwritten telephone number recognition, leader</span> <br>
-	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp   LAMAD Group 
+	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp   LAMDA Group 
 		(led by <span class="tag"><a href="http://cs.nju.edu.cn/zhouzh/"> Zhi-Hua Zhou</a></span>), Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Worte a program to transform the data  from databse to formats that suit my deep learning code frame. <br>
