--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ layout: default
 	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp   LAMDA Group 
 		(led by <span class="tag"><a href="http://cs.nju.edu.cn/zhouzh/"> Zhi-Hua Zhou</a></span>), Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
-		Worte a program to transform the data  from databse to formats that suit my deep learning code frame. <br>
+		Wrote a program to transform the data  from databse to formats that suit my deep learning code frame. <br>
 		Applied BN and ReLU after every convolution, and used SK-s (small kernel size with s channels in convolution layers) networks structure.<br> 
 		Accomplished 96% accurancy on each digit and 90% accurancy on a series of telephone number.<br>
 		
