--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
 			<li>John Tsitsiklis &amp Patrick Jaillet. 6.041: Introduction to Probability - The Science of Uncertainty. MIT. <br>
 			<li>Charles Severance. Python Data Structures. University of Michigan.<br>
 			<li>Hsuan-Tien Lin.  Machine Learning Foundations. National Taiwan University. <br>
-			<li>Andrew Ng. CS229: Machine Learning. Stanford.<br>
+			<li>Andrew Ng. CS229: Machine Learning. Stanford.<span class="tag"><a href="papers/ML_Proposal.pdf"> [Proposal]</a></span>  <br>
 			<li>Silvio Savarese. CS231A: Computer Vision: from 3D reconstruction to recognition. Stanford.<br>
 			<li>Fei-Fei Li &amp Andrej Karpathy. CS231N: Convolutional Neural Networks for Visual Recognition. Stanford.<br>
 		</p>
