--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ layout: default
 	<p><span style="font-weight: bold;">3D Reconstruction Using (Light Detection And Ranging) Lidar and Camera</span> <br>
 	<span style="font-style: italic;"> Aug.2016-Feb.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br> 
+		Learned to use TSDF reconstruct indoor scene from depth image. <span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span>
 		Collected and preprocessed point cloud datasets for indoor 3D scene reconstruction.  <br>
 		Reconstructed real-time indoor scenes using Motion Estimation and Mapping. <br>
 		Implemented low drift odometry and mapping (loam) algorithms to improve accuracy; Python.
