--- a/index.html
+++ b/index.html
@@ -60,14 +60,16 @@ layout: default
 		(led by <span class="tag"><a href="http://cs.nju.edu.cn/zhouzh/"> Zhi-Hua Zhou</a></span>), Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Wrote a program to transform the data  from database to formats that suit my deep learning code frame. <br>
-		Applied BN and ReLU after every convolution, and used SK-s (small kernel size with s channels in convolution layers) networks structure.<br> 
+		Applied BN and ReLU after every convolution, and used SK-s (small kernel size with s channels in convolution layers)
+			networks structure.<br> 
 		Accomplished 96% accurancy on each digit and 90% accurancy on a series of telephone number.<br>
 		
 		
 	<p><span style="font-weight: bold;">3D Reconstruction Using (Light Detection And Ranging) Lidar and Camera</span> <br>
 	<span style="font-style: italic;"> Aug.2016-Feb.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br> 
-		Learned to use TSDF reconstruct indoor scene from depth image. <span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span>
+		Learned to use TSDF reconstruct indoor scene from depth image. 
+			<span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span>(a bit big, wait for a while)<br>
 		Collected and preprocessed point cloud datasets for indoor 3D scene reconstruction.  <br>
 		Reconstructed real-time indoor scenes using Motion Estimation and Mapping. <br>
 		Implemented low drift odometry and mapping (loam) algorithms to improve accuracy; Python.
@@ -111,7 +113,6 @@ layout: default
 		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
 			
 		
-			
 		
 		
 		
@@ -178,8 +179,8 @@ layout: default
 	<div class="content" >      
           <h3>Miscellaneous</h3>
 		<p>
-		Programming/ Software: Familiar with C, C++, MATLAB, Python  &nbsp Experienced on HTML, CSS, Assembly, Altium, TINA <br>
-		Research Related: MatConvNet, Caffe, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, Git, Octave<br>
+		Programming/ Software: Familiar with C, C++, MATLAB, Python  &nbsp Experienced on HTML, CSS, Assembly, Altium <br>
+		Research Related: MatConvNet, Caffe, liblinear, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, WebGL, Git, Octave<br>
 		Document: LaTex, Markdown, MS Office<br>
 		Operating Systems: Ubuntu 14/16, Windows XP/7/10, OS X <br>
 		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
@@ -191,15 +192,14 @@ layout: default
 			[Report]</a>
 			</span><br>
 		Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> &nbsp 
-			(Joyful Snowflakes wirtten by Chih-mo Hsu 
-			<span class="tag">
+			(<span class="tag"> 
 			<a href="http://v.youku.com/v_show/id_XMjA1ODIzMjQwOA==.html?spm=a2hzp.8244740.userfeed.5!2~5~5~5!3~5~A.Rb6hYG">
-			[Video]</a></span>) <br>    
+			Joyful Snowflakes </a></span>  wirtten by Chih-mo Hsu ) <br>    
 		Vice president of a Young Volunteers Association 
 			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Report]</a></span> <br>   
 		Bronze medal at Nanjing University 55th Sports Meeting 
-			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Report]</a></span>  
-		</p> 
+			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Report]</a></span> 
+		</p>
 	</div>
 			
 	<div style="text-align:center;">
