--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@ layout: default
 		Wrote a program to transform the data  from database to formats that suit my deep learning code frame. <br>
 		Applied BN and ReLU after every convolution, and used SK-s (small kernel size with s channels in convolution layers)
 			networks structure.<br> 
-		Accomplished 96% accurancy on each digit and 90% accurancy on a series of telephone number.<br>
+		Accomplished 95% accurancy on each digit and 90% accurancy on a series of telephone number.<br>
 		
 		
-	<p><span style="font-weight: bold;">3D Reconstruction Using (Light Detection And Ranging) Lidar and Camera</span> <br>
+	<p><span style="font-weight: bold;">Real-time 3D Reconstruction Using Lidar (Light Detection And Ranging) and TSDF</span> <br>
 	<span style="font-style: italic;"> Aug.2016-Feb.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br> 
-		Learned to use TSDF reconstruct indoor scene from depth image. 
-			<span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span>(a bit big, wait for a while)<br>
+		Learned to use TSDF reconstruct indoor scene from range images. 
+			<span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span> (a bit big, wait for a while)<br>
 		Collected and preprocessed point cloud datasets for indoor 3D scene reconstruction.  <br>
 		Reconstructed real-time indoor scenes using Motion Estimation and Mapping. <br>
 		Implemented low drift odometry and mapping (loam) algorithms to improve accuracy; Python.
 			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> <br>
-		Calibrated camera and dyed reconstruction results by applying camera information.  
+		Used TSDF to surface reconstruction.  
           
 	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
