--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
 	<span style="font-style: italic;"> Aug.2016-Feb.2017 </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
 		Nanjing University <br> 
 		Learned to use TSDF reconstruct indoor scene from range images. 
-			<span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span> (a bit big, wait for a while)<br>
+			<span class="tag"><a href="http://anyirao.com/tsdf/room.html"> [Demo]</a></span> <br>
 		Collected and preprocessed point cloud datasets for indoor 3D scene reconstruction.  <br>
 		Reconstructed real-time indoor scenes using Motion Estimation and Mapping. <br>
 		Implemented low drift odometry and mapping (loam) algorithms to improve accuracy; Python.
