--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
             <p>Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
             <a href="http://www.nju.edu.cn/en">Nanjing University</a>, China<br>
-            Email: anyirao [at] foxmail (dot) com<br>
+            Email: anyirao [at] outlook (dot) com<br>
             </p>
 	  </div>
 </div>	   
@@ -170,6 +170,7 @@ layout: default
 	<div class="content" >      
 		<h3>Awards</h3>
 		<p>  National Scholarship, from the China Minstry of Education <br>
+		Provincial-Level Merit Student (Highest honor in Jiangsu Province) <br>
 		Nanjing University People Scholarship<br>
                 Nanjing University Excellent Student Leader Award <br>
                 Nanjing University Excellent Student Award <br>
