--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ layout: default
           <h3>Miscellaneous</h3>
 		<p>
 		Programming/ Software: Familiar with C, C++, MATLAB, Python  &nbsp Experienced on HTML, CSS, Assembly, Altium <br>
-		Research Related: MatConvNet, Caffe, liblinear, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, WebGL, Git, Octave<br>
+		Research Related: Theano, MatConvNet, Caffe, liblinear, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, WebGL, Git, Octave<br>
 		Document: LaTex, Markdown, MS Office<br>
 		Operating Systems: Ubuntu 14/16, Windows XP/7/10, OS X <br>
 		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
