--- a/index.html
+++ b/index.html
@@ -115,24 +115,13 @@ layout: default
 		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
 			
 		
-		
-		
-		
-		 <p><span style="font-weight: bold;">Tetris Game; C++ </span> <br>
-		Managed piece shape and edge collisions. Updated pieces and moved them down one row each time a fixed time 
-			 interval expires;
-		Detected when lines have been filled, removed them, kept and displayed score, and handled 
-			 the situation where the grid gets full;
-		Calculated scores, level and cleared line. Moved grid when line is cleared, and 
-			 gave bonus scores for multiple lines added.
-			 <span class="tag"><a href="papers/Tetris_game.txt"> [Details]</a></span>
-			 
 		<p><span style="font-weight: bold;">Cluster sky objects; Python</span> <br>
 		Clustered a catalog of 2 million sky objects into similar objects, e.g. galaxies, nearby stars, quasars, etc. 
 			<span class="tag"><a href="papers/Cluster.txt"> [Details]</a></span>
 		
-
-		
+		<p><span style="font-weight: bold;">Tetris Game; C++ </span>
+			 <span class="tag"><a href="papers/Tetris_game.txt"> [Details]</a></span>
+			 
 		<p><span style="font-weight: bold;">Assembly Language Practice;
 			The Principle of Microcomputers and Interface Techniques </span>
 		<span class="tag"><a href="papers/masm.pdf"> [Project Report]</a></span>
@@ -170,7 +159,7 @@ layout: default
 	<div class="content" >      
 		<h3>Awards</h3>
 		<p>  National Scholarship, from the China Minstry of Education <br>
-		Provincial-Level Merit Student (Highest honor in Jiangsu Province) <br>
+		Provincial-Level Merit Student, Highest honor in Jiangsu Province <br>
 		Nanjing University People Scholarship<br>
                 Nanjing University Excellent Student Leader Award <br>
                 Nanjing University Excellent Student Award <br>
