--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ layout: default
 		<p>My GPA ranks No.1 in each academic year. All major curricula are above 95 (A+). 
 		My overall GPA is 3.96 out of 4.00. I am the top student among 183 classmates in my school. 
 			
-		<p>I finished my major curricula in 2 years and I learned a lot from online courses. <br>
+			
+		<p>I finished my major curricula in 2 years and I learned a lot from online courses. 
+			<a href="http://anyirao.com/more"> [More]</a><br>
 			<li>Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
 			<li>John Tsitsiklis &amp Patrick Jaillet. 6.041: Introduction to Probability - The Science of Uncertainty. MIT. <br>
 			<li>Charles Severance. Python Data Structures. University of Michigan.<br>
