--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@ layout: default
 			
 			
 		<p>I finished my major curricula in 2 years and I learned a lot from online courses. 
-			<a href="http://anyirao.com/more"> [More]</a><br>
-			<li>Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
-			<li>John Tsitsiklis &amp Patrick Jaillet. 6.041: Introduction to Probability - The Science of Uncertainty. MIT. <br>
+			<a href="http://anyirao.com/more"> [Whole]</a><br>
+			
 			<li>Charles Severance. Python Data Structures. University of Michigan.<br>
 			<li>Hsuan-Tien Lin.  Machine Learning Foundations. National Taiwan University. <br>
 			<li>Andrew Ng. CS229: Machine Learning. Stanford.<span class="tag"><a href="papers/ML_Proposal.pdf"> [Proposal]</a></span>  <br>
