--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@ layout: default
 	<div class="content" >      
           <h3>Miscellaneous</h3>
 		<p>
-		Programming/ Software: Familiar with C, C++, MATLAB, Python  &nbsp Experienced on HTML, CSS, Assembly, Altium <br>
-		Research Related: Theano, MatConvNet, Caffe, liblinear, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, WebGL, Git, Octave<br>
+		Programming/ Software: Familiar with Python, C/C++, MATLAB   &nbsp Experienced on HTML, CSS, Assembly, Altium <br>
+		Research Related: TensorFlow, Theano, MatConvNet, Caffe, liblinear, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, WebGL, Git<br>
 		Document: LaTex, Markdown, MS Office<br>
 		Operating Systems: Ubuntu 14/16, Windows XP/7/10, OS X <br>
 		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
