--- a/index.html
+++ b/index.html
@@ -90,11 +90,10 @@ layout: default
 	     <p><span style="font-weight: bold;">Single-Photon Detector, main contributor</span> <br>
 		<span style="font-style: italic;">  Oct.2014-Dec.2015</span>
 		     &nbsp  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
-		Designed a 64 road low-noise pre-amplifier using a symmetric structure.  <br>
-		Drew 8 layers PCB; Altium.  <br>
-		Reduced noise by 100 times.  
+		Designed a 64 road low-noise pre-amplifier using a symmetric structure, reduced noise by 100 times.  <br>
+		Drew 8 layers PCB; Altium. 
 		     <span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span>
-		     <span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Presentation]</a></span>
+		     <span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Presentation]</a></span><br>
 	</div>        
 	
 	<div class="content anchor" id="project">  
@@ -165,7 +164,7 @@ layout: default
                 Nanjing University Excellent Student Award <br>
 	        Top Volunteer Excellence Award<br>
 		Calculus World Cup world ranking 32th, 
-			<a herf="http://www.ntu.edu.tw/english/index.html"> National Taiwan University </a></p>
+			<a herf="http://www.ntu.edu.tw/english/"> National Taiwan University </a></p>
 	</div>    
 		
 	<div class="content" >      
