--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ layout: default
                 Nanjing University Excellent Student Leader Award <br>
                 Nanjing University Excellent Student Award <br>
 	        Top Volunteer Excellence Award<br>
-		Calculus World Cup world ranking 32th, 
-			<a herf="http://www.ntu.edu.tw/english/"> National Taiwan University </a></p>
+		Calculus World Cup world ranking 32th, <a herf="www.ntu.edu.tw/english/"> National Taiwan University </a></p>
+			
 	</div>    
 		
 	<div class="content" >      
