--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ layout: default
 			
 		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span> <br>
 			Used sparse coding to reduce the ambiguities in the 3D pose estimation; 
-			Enforced human-portion constraints to get a mimimiazation problem
+			Enforced human-portion constraints to get a minimization problem
 		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
 			
 		
