--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 	<h3>Short Bio</h3>
 		<p> I am a third year undergrad student from School of Electronic Science and Engineering, Nanjing University.
 		I serve as a <a href="http://www.huawei.com/en/">HUAWEI</a> campus ambassador. 
-			I am a student member of <a href="https://www.ieee.org/index.html">IEEE</a>,
+			I am a senior student member of <a href="https://www.ieee.org/index.html">IEEE</a>,
 		a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
 			Excellent Engineer Training Program</a>,
 		from <a href="http://www.moe.gov.cn/">the China Minstry of Education</a>.
