--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ layout: default
 		
 	<div class="content" >      
 		<h3>Awards</h3>
-		<p>  National Scholarship, from the China Minstry of Education <br>
-		Provincial-Level Merit Student, Highest honor in Jiangsu Province <br>
+		<p>  National Scholarship (Highest honor in China)<br>
+		Provincial-Level Merit Student (Highest honor in Jiangsu Province) <br>
 		Nanjing University People Scholarship<br>
                 Nanjing University Excellent Student Leader Award <br>
                 Nanjing University Excellent Student Award <br>
