--- a/index.html
+++ b/index.html
@@ -183,9 +183,7 @@ layout: default
 			[Report]</a>
 			</span><br>
 		Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> &nbsp 
-			(<span class="tag">
-			<a href="http://v.youku.com/v_show/id_XMjA1ODIzMjQwOA==.html?spm=a2hzp.8244740.userfeed.5!2~5~5~5!3~5~A.Rb6hYG">
-			Joyful Snowflakes </a></span>  written by Chih-mo Hsu) <br>    
+			(<span class="tag"><a href="http://v.youku.com/v_show/id_XMjA1ODIzMjQwOA==.html?spm=a2hzp.8244740.userfeed.5!2~5~5~5!3~5~A.Rb6hYG">Joyful Snowflakes </a></span>  written by Chih-mo Hsu) <br>    
 		Vice president of a Young Volunteers Association 
 			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Report]</a></span> <br>   
 		Bronze medal at Nanjing University 55th Sports Meeting 
