--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: default
 		Reconstructed real-time indoor scenes using Motion Estimation and Mapping. <br>
 		Implemented low drift odometry and mapping (loam) algorithms to improve accuracy; Python.
 			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> <br>
-		Used TSDF to surface reconstruction. <span class="tag"><a href="http://anyirao.com/tsdf/corridor.html"> [Demo]</a></span>
+		Used TSDF to reconstruct surface. <span class="tag"><a href="http://anyirao.com/tsdf/corridor.html"> [Demo]</a></span>
           
 	<p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
