--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@ layout: default
 	<p><span style="font-weight: bold;">Express bill handwritten telephone number recognition, leader</span> <br>
 	<span style="font-style: italic;"> Feb.2017-present </span> &nbsp  Nanjing University <br> 
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
-		Wrote a program to transform the data  from database to formats that suit my deep learning code frame. <br>
-		Applied BN and ReLU after every convolution, and used SK-s (small kernel size with s channels in convolution layers)
-			networks structure.<br> 
+		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
+		Implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
 		Accomplished 95% accurancy on each digit and 90% accurancy on a series of telephone number.<br>
 		
 		
