--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ layout: default
 		Wrote a report to ministry of transportation. 
 		   
             		    
-	     <p><span style="font-weight: bold;">Single-Photon Detector, main contributor</span> <br>
+	     <p><span style="font-weight: bold;">Single Photon Detector, main contributor</span> <br>
 		<span style="font-style: italic;">  Oct.2014-Dec.2015</span>
 		     &nbsp  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
 		Designed a 64 road low-noise pre-amplifier using a symmetric structure, reduced noise by 100 times.  <br>
