--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@ layout: default
 		a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
 			Excellent Engineer Training Program</a>,
 		from <a href="http://www.moe.gov.cn/">the China Minstry of Education</a>.
-		
-		<p>I got a meritorious winner prize in 2016 National Mathematical Modeling Contest (MCM). <br>
-		I won the first prize in an electronics design contest and the paper about it was published in Nanjing University 
-		19th Art and Science Forum. 
-		</p>
 	</div>
 </div>   
 	
@@ -61,7 +56,7 @@ layout: default
 		Learned PAC learning theory, Dropout, Batch Normalization, ResNet, RCNN, F-RCNN. <br>
 		Preprocessed image data (cleaning, stretching, rotating, normalizing). <br>
 		Implemented VGG16, VGG19, GoogLeNet in Tensorflow, Theano, Caffe framework.<br> 
-		Accomplished 95% accurancy on each digit and 90% accurancy on a series of telephone number.<br>
+		Accomplished 95% accuracy on each digit and 90% accuracy on a series of telephone number.<br>
 		
 		
 	<p><span style="font-weight: bold;">Real-time 3D Reconstruction Using Lidar (Light Detection And Ranging) and TSDF</span> <br>
@@ -128,54 +123,48 @@ layout: default
 
 	<div class="content" >      
 		<h3>Leadership Experience</h3>
-		<p>  Grade Leader in the Student Work Office at Nanjing University &nbsp &nbsp 
-			<span style="font-style: italic;"> 10/2014-10/2015</span> <br>
-		Instructed class monitors on effective class management; 
-		Assisted class monitors with presentation preparation and delivery of Campus life essentials to freshman students;
-		Assisted Professors in marking and helping students understand key problem areas;
-		Provided essential support to all freshman students in preparing for CET, CRE
-                </p>
-		
 		<p>  Vice President of a Young Volunteers Association at Nanjing University &nbsp &nbsp 
 			<span style="font-style: italic;"> 06/2015-06/2016</span> <br>
-		Organized volunteers to assist 865 teams containing 2695 
-			candidates in the National Undergraduate Electronics Design Contest;
+		Organized and participated in over 100 out-of-school and 20 in-school activities covering over 1000 volunteers;
 		Recognized as a key team leader in the successful Warm 100 of China Foundation for the Poverty Alleviation Campaign, 
 			and our group received the excellent group award.
                 </p>
-		
-		<p>  Team Leader for the Nanjing University Elderly care Volunteer Program  &nbsp &nbsp 
-			<span style="font-style: italic;"> 09/2015-04/2016</span> <br>
-		With the team visited elderly people in their home and provided housekeeping, 
-			food shopping and companionship; 
-		As team leader, designed a survey to analyze volunteer activities effectiveness 
-			and determined how to improve the experience for the elderly people 
+
+		<p>  Co-Founder of a Children Care Volunteer Program  &nbsp &nbsp 
+			<span style="font-style: italic;"> 09/2015-12/2015</span> <br>		
+		Co-founded a psychological consulting program to promote left-behind, whose parents left them to seek work in big cities, 
+			children growth and education.
+		Volunteered to teach left-behind children Math and English in 
+			a junior high school located in the remote, underdeveloped Xiushui county.
+		Recognized as a key team leader in the successful Warm One Hundred Campaign, which raised money for 
+			left-behind children in remote and poor areas to help them buy new books and school supplies.
                 </p>
-		
 	</div> 
 		
 	<div class="content" >      
 		<h3>Awards</h3>
-		<p>  National Scholarship (Highest honor in China)<br>
-		Provincial-Level Merit Student (Highest honor in Jiangsu Province) <br>
+		<p>National Scholarship awarded by the Chinese Ministry of Education<br>
+		Provincial-Level Merit Student, the highest honor in Jiangsu Province<br>
 		Nanjing University People Scholarship<br>
-                Nanjing University Excellent Student Leader Award <br>
-                Nanjing University Excellent Student Award <br>
+                Nanjing University Outstanding Student Leader Award<br>
+                Nanjing University Outstanding Student Award<br>
 	        Top Volunteer Excellence Award<br>
 		Calculus World Cup world ranking 32th, <a herf="www.ntu.edu.tw/english/"> National Taiwan University </a></p>
-			
+		Meritorious winner prize in the 2016 National Mathematical Modeling Contest<br>
+		First prize in the 2014 University Electronics Design Contest and the paper about it was published in Nanjing University 
+		19th Art and Science Forum	
 	</div>    
 		
 	<div class="content" >      
-          <h3>Miscellaneous</h3>
+        <h3>Skills</h3> 
 		<p>
-		Programming/ Software: Familiar with Python, C/C++, MATLAB   &nbsp Experienced on HTML, CSS, Assembly, Altium <br>
-		Research Related: TensorFlow, Theano, MatConvNet, Caffe, liblinear, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, WebGL, Git<br>
-		Document: LaTex, Markdown, MS Office<br>
-		Operating Systems: Ubuntu 14/16, Windows XP/7/10, OS X <br>
+		Programming: Advanced Python, C/C++, MATLAB   &nbsp Intermediate HTML, CSS, Assembly, Altium <br>
+		Research Platforms and Libraries: TensorFlow, Theano, MatConvNet, Caffe, liblinear, libSVM, VLFeat, CVX, SPArse Modeling Software, OpenCV，OpenGL, WebGL, Git<br>
+		Document: LaTex, Markdown<br>
+		Operating Systems: Ubuntu 14/16, Windows XP/7/10, iOS X <br>
 		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
 		</p>
-		
+	<h3>Miscellaneous</h3>	
 		<p>Research Intern/ Group leader in CHANGJIANG ELEC. TECH. 
 			(<span class="tag"><a href=" http://www.cj-elec.com/en/">JCET</a>)
 			<span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html"> 
@@ -185,7 +174,7 @@ layout: default
 			(<span class="tag"><a href="http://v.youku.com/v_show/id_XMjA1ODIzMjQwOA==.html?spm=a2hzp.8244740.userfeed.5!2~5~5~5!3~5~A.Rb6hYG">Joyful Snowflakes </a></span>  written by Chih-mo Hsu) <br>    
 		Vice president of a Young Volunteers Association 
 			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Report]</a></span> <br>   
-		Bronze medal at Nanjing University 55th Sports Meeting 
+		Bronze medal at Nanjing University 55th Sports Meet 
 			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Report]</a></span> 
 		</p>
 	</div>
