--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: default
 		Constructed three models to depict road circumstances and two models to predict car motion using 
 		Markov Decision Process and OD estimated matrix method; Matlab, C.<br>
 		Improved our solutions using <b> Convex Optimization </b> in terms of traffic load, vehicle type and different kinds of 
-			tollbooths. <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span> Wrote a report to ministry of transportation. <br>
+			tollbooths. <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span><br>
 		 
 		   
             		    
