--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@ layout: default
 		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
 		</p>
 	<h3>Miscellaneous</h3>	
-		<p>Research Intern/ Group leader in CHANGJIANG ELEC. TECH. 
-			(<span class="tag"><a href=" http://www.cj-elec.com/en/">JCET</a>)
+		<p>Research Intern/ Group leader in <span class="tag"><a href=" http://www.cj-elec.com/en/">CHANGJIANG ELEC. TECH.</a>
 			<span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html"> 
 			[Report]</a>
 			</span><br>
