--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@ layout: default
 		<h3>Leadership Experience</h3>
 		<p>  Vice President of a Young Volunteers Association at Nanjing University &nbsp &nbsp 
 			<span style="font-style: italic;"> 06/2015-06/2016</span> <br>
-		Organized and participated in over 100 out-of-school and 20 in-school activities covering over 1000 volunteers;
-		Recognized as a key team leader in the successful Warm 100 of China Foundation for the Poverty Alleviation Campaign, 
-			and our group received the excellent group award.
+		Organized and participated in over 100 out-of-school and 20 in-school activities covering over 1000 volunteers.
+		Our assocation received a volunteers association excellence award.
                 </p>
 
 		<p>  Co-Founder of a Children Care Volunteer Program  &nbsp &nbsp 
