--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ layout: default
                 Nanjing University Outstanding Student Leader Award<br>
                 Nanjing University Outstanding Student Award<br>
 	        Top Volunteer Excellence Award<br>
-		Calculus World Cup world ranking 32th, <a herf="www.ntu.edu.tw/english/"> National Taiwan University </a>
+		Calculus World Cup world ranking 32th, <a herf="www.ntu.edu.tw/english/"> National Taiwan University </a><br>
 		Meritorious winner prize in the 2016 National Mathematical Modeling Contest<br>
 		First prize in the 2014 University Electronics Design Contest and the paper about it was published in Nanjing University 
 		19th Art and Science Forum
