--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ layout: default
 	<span style="font-style: italic;">Aug.2016-Sep.2016 /&nbsp Dec.2016-Jan.2017 </span> <br>
 		Learned K-armed bandit, Softmax, Monte Carlo RL, imitation learning. <br>
 		Constructed three models to depict road circumstances and two models to predict car motion using 
-		Markov Decision Process and OD estimated matrix method; Matlab, C.<br>
-		Improved our solutions using <b> Convex Optimization </b> in terms of traffic load, vehicle type and different kinds of 
+		Markov Decision Process and OD estimated matrix method.<br>
+		Improved our solutions using Convex Optimization in terms of traffic load, vehicle type and different kinds of 
 			tollbooths. <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span><br>
 		 
 		   
